--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <groovy.version>3.0.8</groovy.version>
         <gmavenplus-plugin.version>1.12.1</gmavenplus-plugin.version>
         <kotest-runner-junit5-jvm.version>4.6.0</kotest-runner-junit5-jvm.version>
-        <junit-jupiter-api.version>5.7.1</junit-jupiter-api.version>
+        <junit-jupiter.version>5.7.1</junit-jupiter.version>
 
         <!-- Assetions -->
         <assertj-core.version>3.15.0</assertj-core.version>
