--- a/concert-demos-rest-service-mvc/pom.xml
+++ b/concert-demos-rest-service-mvc/pom.xml
@@ -102,12 +102,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.kotest</groupId>
-            <artifactId>kotest-runner-junit5-jvm</artifactId>
-            <version>${kotest-runner-junit5-jvm.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit-jupiter.version}</version>
@@ -131,7 +125,29 @@
             <version>${mockk.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>io.kotest.extensions</groupId>
+            <artifactId>kotest-extensions-spring</artifactId>
+            <version>1.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-runner-junit5-jvm</artifactId>
+            <version>4.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-runner-junit5</artifactId>
+            <version>4.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -149,6 +165,7 @@
                         <plugin>spring</plugin>
                         <plugin>jpa</plugin>
                     </compilerPlugins>
+                    <jvmTarget>${java.version}</jvmTarget>
                 </configuration>
                 <executions>
                     <execution>
@@ -160,6 +177,7 @@
                         <configuration>
                             <sourceDirs>
                                 <source>${project.basedir}/src/test/kotlin</source>
+                                <source>${project.basedir}/src/test/kotest</source>
                             </sourceDirs>
                         </configuration>
                     </execution>
@@ -186,7 +204,6 @@
                     <includes>
                         <include>**/*Test.*</include>
                         <include>**/*Spec.*</include>
-                        <include>**/*KSpec.*</include>
                     </includes>
                 </configuration>
             </plugin>
