🎸 Make and pom update

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <junit-jupiter.version>5.7.1</junit-jupiter.version>
         <springmockk.version>3.0.1</springmockk.version>
         <kotest-extensions-spring.version>1.0.0</kotest-extensions-spring.version>
+        <mockk.version>1.12.0</mockk.version>
 
         <!-- Assetions -->
         <assertj-core.version>3.15.0</assertj-core.version>
