--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>2.5.3</version>
     </parent>
 
     <groupId>org.jesperancinha.concerts</groupId>
@@ -31,8 +31,8 @@
         <spring-boot-maven-plugin.version>2.5.2</spring-boot-maven-plugin.version>
 
         <!-- Tests -->
-        <spock-spring.version>2.0-M1-groovy-2.5</spock-spring.version>
-        <spock-bom.version>2.0-M5-groovy-3.0</spock-bom.version>
+        <spock-spring.version>2.0-groovy-3.0</spock-spring.version>
+        <spock-bom.version>2.0-groovy-3.0</spock-bom.version>
         <groovy.version>3.0.8</groovy.version>
         <gmavenplus-plugin.version>1.12.1</gmavenplus-plugin.version>
         <kotest.version>4.4.0</kotest.version>
